--- a/frontend/package.json
+++ b/frontend/package.json
@@ -75,7 +75,7 @@
         "react-portal": "4.2.0",
         "react-redux": "7.1.3",
         "react-router-dom": "5.1.2",
-        "react-scripts": "3.2.0",
+        "react-scripts": "^3.2.0",
         "react-select": "3.1.0",
         "react-swipeable-views": "0.13.9",
         "react-syntax-highlighter": "12.2.1",
